// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Section /> > should match the snapshot background and text colour 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_borderRadius_full__onxwju9 sprinkles_paddingBottom_6_mobile__onxwjupd sprinkles_paddingLeft_6_mobile__onxwjuqh sprinkles_paddingRight_6_mobile__onxwjurl sprinkles_paddingTop_6_mobile__onxwjusp sprinkles_display_inline-block_mobile__onxwju8d sprinkles_position_relative_mobile__onxwju9p sprinkles_backgroundColor_gray900__onxwju4f"
  >
    <span
      align="center"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_danger__1xnpmd7k useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_2__1xnpmd72 TextBubble_bubbleText__bqog00 reset_block__1oah0224 sprinkles_paddingLeft_1_mobile__onxwjupx sprinkles_paddingRight_1_mobile__onxwjur1 sprinkles_position_absolute_mobile__onxwju9t sprinkles_overflow_hidden_mobile__onxwju8p sprinkles_width_full_mobile__onxwjudd"
    >
      ERROR
    </span>
  </div>
</div>
`;

exports[`<Section /> > should match the snapshot for standard label 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_borderRadius_full__onxwju9 sprinkles_paddingBottom_6_mobile__onxwjupd sprinkles_paddingLeft_6_mobile__onxwjuqh sprinkles_paddingRight_6_mobile__onxwjurl sprinkles_paddingTop_6_mobile__onxwjusp sprinkles_display_inline-block_mobile__onxwju8d sprinkles_position_relative_mobile__onxwju9p sprinkles_backgroundColor_gray900__onxwju4f"
  >
    <span
      align="center"
      class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_bold__1xnpmd7r useTextStyles_noWrap__1xnpmd7s useTextStyles_sizes_2__1xnpmd72 TextBubble_bubbleText__bqog00 reset_block__1oah0224 sprinkles_paddingLeft_1_mobile__onxwjupx sprinkles_paddingRight_1_mobile__onxwjur1 sprinkles_position_absolute_mobile__onxwju9t sprinkles_overflow_hidden_mobile__onxwju8p sprinkles_width_full_mobile__onxwjudd"
    >
      PASS
    </span>
  </div>
</div>
`;
